fixed the gpb colors lmao

--- a/keyhunt/keyhunt-1.1.html
+++ b/keyhunt/keyhunt-1.1.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="keyhunt.css">
 		<title>what are you running from?</title>
-  		<link rel="icon" type="image/x-icon" href="assets/favicon-1.1.png">
+  		<link rel="icon" type="image/x-icon" href="assets/Bluouy.png">
 	</head>
 
 	<meta content="Key Hunt Guide (v1.1)" property="og:title" />
 	<meta content="what are you running from?" property="og:description" />
 	<meta content="https://westcraft15.github.io/keyhunt/keyhunt-1.1" property="og:url" />
-	<meta content="https://westcraft15.github.io/keyhunt/assets/favicon-1.1.png" property="og:image" />
+	<meta content="https://westcraft15.github.io/keyhunt/assets/Bluouy.png" property="og:image" />
 	<meta content="#33ADFF" data-react-helmet="true" name="theme-color" />
 
 	<body style="text-align: center;">
