major changes to other

--- a/keyhunt/guide-1.1.html
+++ b/keyhunt/guide-1.1.html
@@ -94,7 +94,7 @@
 			<p>At the very top of the tower, you can collect a Key by falling off the right side and hugging the tower wall.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XFAqhj6tBYo" title="Key 14" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="15">Key 15</h2>
-			<p>Floating above the pedestal in the Green Room, right before you enter CToP.</p>
+			<p>Floating above the pedestal in the Green Room, right before you enter CToP. (Note: The Key may be behind the score text.)</p>
 			<h3>Common Issues:</h3>
 			<ol><li>If you can’t enter the door, <a href="help-1.1#ctop">click here</a>.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/W9-0v2ghRiQ" title="Key 15" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
