--- a/keyhunt/other-1.1.html
+++ b/keyhunt/other-1.1.html
@@ -46,7 +46,8 @@
 			<p>0:59 - [Secure] so many matters</p>
 			<p>1:01 - Ha-zi-est, to what [Unintelligible]</p>
 			<p>1:07 - [Unintelligible, perhaps another language?]</p>
-			<h2>GPB Dialog</h2>
+			<h2 id="gpb">GPB Dialog</h2>
+			<img src="assets/gpb.gif">
 			<ul style="font-size: 16px;">
 				<li>Standard Dialog:
 					<ol>
@@ -111,7 +112,11 @@
 				</li>
 				<p>There's also a 0.5% chance every time you talk for him to say "leave" repeatedly afterwards.</p>
 			</ul>
-			<h2>Crustavo</h2>
+			<h2 id="crustavo">Crustavo</h2>
+			<div class="crustavo">
+				<img src="assets/crustavo.gif" class="crustavo2">
+				<img src="assets/crustavopoint.gif" class="crustavo3">
+			</div>
 			<p>Crustavo exists solely to say vague and ominous things to scare the player. None of his dialog is actually relevant.</p>
 			<ul style="font-size: 16px;">
 				<li>Floor 1: I've been seeing more and more cracks around in this tower. This place has seen better days...</li>
@@ -131,10 +136,11 @@
 				<li>Floor 5: ...I wouldn't trust that tubby golden fellow if I were you...</li>
 			</ul>
 			<h2 id="fakekeys">Fake Keys</h2>
-			<p>There are several fake Keys scattered around the tower. Here are a few of them:</p>
+			<p>There are several fake Keys scattered around the tower. Here they are:</p>
 			<img src="assets/fake-keys/f1.png" alt="The fake Key in the wall above John Gutter." width="50%">
 			<img src="assets/fake-keys/ctop.png" alt="The fake Key above the water on Floor 3 of CToP." width="50%">
 			<img src="assets/fake-keys/crustcove.png" alt="The fake Key in Crust Cove." width="50%">
+			<img src="assets/fake-keys/ancientcheese.png" alt="The fake Key in The Ancient Cheese." width="50%">
 		</div>
     </body>
 </html>
