--- a/keyhunt/other-af23.html
+++ b/keyhunt/other-af23.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="af23.css">
 		<title>when will you learn?</title>
-  		<link rel="icon" type="image/x-icon" href="assets/favicon-af23.png">
+  		<link rel="icon" type="image/x-icon" href="assets/scb.png">
 	</head>
 
 	<meta content="Key Hunt Guide (April Fools)" property="og:title" />
 	<meta content="when will you learn?" property="og:description" />
 	<meta content="https://westcraft15.github.io/keyhunt/keyhunt-af23" property="og:url" />
-	<meta content="https://westcraft15.github.io/keyhunt/assets/favicon-af23.png" property="og:image" />
+	<meta content="https://westcraft15.github.io/keyhunt/assets/scb.png" property="og:image" />
 	<meta content="#E03000" data-react-helmet="true" name="theme-color" />
 
 	<body>
@@ -49,7 +49,7 @@
 			</ol>
 			<h2>Silver Coneboy</h2>
 			<p>Silver Coneboy is a new entity that appears on top of the tower once you've collected all 8 Keys. He says a line of dialog and closes your game, resetting your keys in the process.</p>
-			<img src="assets/favicon-af23.png">
+			<img src="assets/scb.png">
 			<p>"when will you learn?"</p>
 			<h2>golden_pizazboy.png</h2>
 			<p>A room containing this image is present in the files. It can't be accessed normally. (Image brightened for clarity)</p>
