--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="keyhunt.css">
 		<title>another lost soul has come here</title>
-  		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
 	</head>
 
 	<meta content="Key Hunt Guide (v1.2)" property="og:title" />
@@ -111,7 +110,7 @@
 			<p>At the very top of the tower, you can collect a Key by falling off the right side and hugging the tower wall.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XFAqhj6tBYo" title="Key 14" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="15">Key 15</h2>
-			<p>Floating above the pedestal in the Green Room, right before you enter CToP.</p>
+			<p>Floating above the pedestal in the Green Room, right before you enter CToP. (Note: The Key is behind the score text.)</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/W9-0v2ghRiQ" title="Key 15" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="16">Key 16</h2>
 			<p>Ground Pound just to the left of the John Blocks near Holiday Cheer.</p>
@@ -153,21 +152,21 @@
 			<p>On Floor 2 you can enter the area with Fun Farm via hidden John Blocks above the visible ones.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/C_LS53QqUFg" title="Key 25" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="26">Key 26</h2>
-			<p>You can break through the top of the wall to the right of Holiday Cheer. Talk to the Pizzaboy Clone and Super Jump directly above him to collect the Key. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT WILL LOCK YOU OUT OF KEY 37.</p>
+			<p>You can break through the top of the wall to the right of Holiday Cheer. Talk to the Pizzaboy Clone and Super Jump directly above him to collect the Key. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT WILL LOCK YOU OUT OF KEY 37. IF YOU WANT TO KNOW WHAT IT SAYS, CLICK <a href="other#pbapparitions">HERE</a></p>
 			<h3>Common Issues:</h3>
 			<ol><li>If the block is still unbreakable, talk to GPB.</li></ol>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7Yf12YkL10Q" title="Key 26" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="27">Key 27</h2>
-			<p>Ground Pound just to the left of Fast Food Saloon. Talk to the Pizzaboy Clone and run right until you reach the Key. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT WILL LOCK YOU OUT OF KEY 37.</p>
+			<p>Ground Pound just to the left of Fast Food Saloon. Talk to the Pizzaboy Clone and run right until you reach the Key. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT WILL LOCK YOU OUT OF KEY 37. IF YOU WANT TO KNOW WHAT IT SAYS, CLICK <a href="other#pbapparitions">HERE</a></p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/0betMQUhZR8" title="Key 27" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="28">Key 28</h2>
-			<p>Wall Run up the overhang to the right of Deep Dish 9 to access another room. You can go through the ceiling on the right side to talk to the Pizzaboy Clone. The Key will spawn in a secret in the left wall of the bottom room. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT WILL LOCK YOU OUT OF KEY 37.</p>
+			<p>Wall Run up the overhang to the right of Deep Dish 9 to access another room. You can go through the ceiling on the right side to talk to the Pizzaboy Clone. The Key will spawn in a secret in the left wall of the bottom room. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT WILL LOCK YOU OUT OF KEY 37. IF YOU WANT TO KNOW WHAT IT SAYS, CLICK <a href="other#pbapparitions">HERE</a></p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/T9oQCU3TOFo" title="Key 28" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="29">Key 29</h2>
-			<p>Super Jump from the right half of the Oh Shit! gate to find a secret room. Enter the door and talk to the Pizzaboy Clone. The Key will spawn on a platform below you. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT WILL LOCK YOU OUT OF KEY 37.</p>
+			<p>Super Jump from the right half of the Oh Shit! gate to find a secret room. Enter the door and talk to the Pizzaboy Clone. The Key will spawn on a platform below you. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT WILL LOCK YOU OUT OF KEY 37. IF YOU WANT TO KNOW WHAT IT SAYS, CLICK <a href="other#pbapparitions">HERE</a></p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/h7dG1so0OuI" title="Key 29" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="30">Key 30</h2>
-			<p>Talk to GPB. The Key spawns on a high platform to his left. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT WILL LOCK YOU OUT OF KEY 37.</p>
+			<p>Talk to GPB. The Key spawns on a high platform to his left. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT WILL LOCK YOU OUT OF KEY 37. IF YOU WANT TO KNOW WHAT IT SAYS, CLICK <a href="other#pbapparitions">HERE</a></p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/6FVqR5OnoFw" title="Key 30" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="31">Key 31</h2>
 			<p>In Pizzascape, the Key is in a new room above the Secret that’s only available during Pizza Time. If you can’t access it, talk to GPB in the Void Room and try again. Complete a short challenge to find the Key and a Pizzaboy Cutout.</p>
