--- a/keyhunt/help-af23.html
+++ b/keyhunt/help-af23.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="af23.css">
 		<title>when will you learn?</title>
-  		<link rel="icon" type="image/x-icon" href="assets/favicon-af23.png">
+  		<link rel="icon" type="image/x-icon" href="assets/scb.png">
 	</head>
 
 	<meta content="Key Hunt Guide (April Fools)" property="og:title" />
 	<meta content="when will you learn?" property="og:description" />
 	<meta content="https://westcraft15.github.io/keyhunt/keyhunt-af23" property="og:url" />
-	<meta content="https://westcraft15.github.io/keyhunt/assets/favicon-af23.png" property="og:image" />
+	<meta content="https://westcraft15.github.io/keyhunt/assets/scb.png" property="og:image" />
 	<meta content="#E03000" data-react-helmet="true" name="theme-color" />
 
 	<body>
