--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -2,9 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="keyhunt-1.2.css">
+		<link rel="stylesheet" href="other-1.2.css">
 		<title>another lost soul has come here</title>
-  		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
 	</head>
 
 	<meta content="Key Hunt Guide (v1.2)" property="og:title" />
@@ -14,7 +13,7 @@
 	<meta content="#D8A030" data-react-helmet="true" name="theme-color" />
 
 	<script>
-		const head = document.getElementsByTagName("head")[0];
+		const head = document.getElementsByTagName("head")[0]
 		const names = ["Grouy", "Greouy", "Bluouy", "Reouy", "Purouy", "Blaouy", "Lenny", "Gouy", "Piouy", "Oraouy"]
 
 		const favicon = document.createElement("link")
@@ -61,9 +60,11 @@
 			<p>0:59 - [Secure] so many matters</p>
 			<p>1:01 - Ha-zi-est, to what [Unintelligible]</p>
 			<p>1:07 - [Unintelligible, perhaps another language?]</p>
+			<h2>Purgatory</h2>
 			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/242513887&color=%23ff5500&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
 			<p>This is the music that plays in Purgatory. It's taken from the Yume Nikki OST. It was also used in the April Fools build.</p>
-			<h2>GPB Dialog</h2>
+			<h2 id="gpb">GPB Dialog</h2>
+			<img src="assets/gpb.gif">
 			<ul style="font-size: 16px;">
 				<li>First Interaction:
 					<ol>
@@ -152,7 +153,60 @@
 					</ol>
 				</li>
 			</ul>
-			<h2>Crustavo</h2>
+			<h2 id="pbclones">Pizzaboy Clones</h2>
+			<img src="assets/pbclone.png">
+			<p>The Pizzaboy Clones appear in the Void Rooms on each floor.</p>
+			<ol style="font-size: 16px;">
+				<li>what is it you seek?<br>a reward? salvation?<br>you will not find it here</li>
+				<li>look into the sky<br>what is it you see<br>i see nothing<br>i see so much of it</li>
+				<li>all sorts of hidden things<br>nothing truly makes sense<br>you cannot fathom to understand</li>
+				<li>it seems your time runs thin<br>spend your time wisely<br>we have been waiting</li>
+			</ol>
+			<h2 id="pbapparitions">Pizzaboy Apparitions</h2>
+			<p>Pizzaboy Apparitions appear on each floor of the hub. They spawn after collecting 25 Keys and signify that the Pizzaboy Clone on that floor hasn't been talked to yet. DO NOT TALK TO THE ONES THAT LINGER, DOING SO WILL LOCK YOU OUT OF KEY 37.</p>
+			<ol style="font-size: 16px;">
+				<li>keep pressing on and you may find something you do not like</li>
+				<li>we have been watching your progress. it is laughable</li>
+				<li>there is nothing left for you</li>
+				<li>do you see the light at the end of the tunnel?</li>
+				<li>what comes at the end is beyond your comprehension</li>
+			</ol>
+			<h2 id="cbapparitions">Coneboy Apparitions</h2>
+			<img src="assets/cbclone.png">
+			<p>The Coneboy Apparitions appear in place of the Pizzaboy Apparitions after defeating GPB (assuming you never talked to any of them).</p>
+			<ol style="font-size: 16px;">
+				<li>Someone is waiting for you.</li>
+				<li>It would be rude to deny our invitation.</li>
+				<li>Maybe we can answer your questions.</li>
+				<li>Time is of the essence, please.</li>
+				<li>We have been expecting you.<br>Please, do come in.<br>He wants to speak to you.</li>
+			</ol>
+			<h2 id="heaven">the angel</h2>
+			<p>we do not know who he is</p>
+			<p>we do not know what he wants</p>
+			<p>but he is here</p>
+			<ul style="font-size: 16px;">
+				<li>It seems after your search, you still are not satisifed.<br>You have done everything... have you not?</li>
+				<li>Constant searching...<br>Constant questions...</li>
+				<li>And for what..?<br>There is nothing at the end...</li>
+				<li>Nothing but...<br>Wasted time.<br>Tell me...<br>...was it worth it?</li>
+			</ul>
+			<h2 id="scb">Silver Coneboy</h2>
+			<img src="assets/scb.png">
+			<p>Silver Coneboy appears in the Void Room after talking to the angel on each floor.</p>
+			<ul style="font-size: 16px;">
+				<li>it seems you have found yourself back to me<br>there is only one out to this madness<br>would you like to go back and start anew
+					<ul style="font-size: 16px; list-style-type: none;">
+						<li>yes</li>
+						<li>no</li>
+					</ul>
+				</li>
+			</ul>
+			<h2 id="crustavo">Crustavo</h2>
+			<div class="crustavo">
+				<img src="assets/crustavo.gif" class="crustavo2">
+				<img src="assets/crustavopoint.gif" class="crustavo3">
+			</div>
 			<p>Crustavo exists solely to say vague and ominous things to scare the player. None of his dialog is actually relevant.</p>
 			<ul style="font-size: 16px;">
 				<li>Floor 1.1: I've been seeing more and more cracks around in this tower. This place has seen better days...</li>
@@ -179,9 +233,10 @@
 				<li>Floor 5.1: Aaaaah! You scared me! Next time you sneak up on me, make sure to take me out!</li>
 				<li>Floor 5.2: Something feels weird...</li>
 			</ul>
-			<h2 id="fakekeys">Fake Key</h2>
-			<p>There is only one fake Key. Here’s it’s location:</p>
+			<h2 id="fakekeys">Fake Keys</h2>
+			<p>There are a couple fake Keys scattered around the tower. Here they are:</p>
 			<img src="assets/fake-keys/crustcove.png" alt="The fake Key in Crust Cove." width="50%">
+			<img src="assets/fake-keys/ancientcheese.png" alt="The fake Key in The Ancient Cheese." width="50%">
 		</div>
     </body>
 </html>
