made the void room music mobile friendly

--- a/keyhunt/other-1.1.html
+++ b/keyhunt/other-1.1.html
@@ -35,7 +35,10 @@
 			<p>Mimics are a rare kind of Toppin that can appear at any time. Upon entering a room with a Toppin, there is a 2%* chance that the Toppin will become a mimic. Exiting and reentering the room will reset the Toppin and reroll the RNG. When a Toppin becomes a mimic, it has a 50% chance to play a distorted cry for help. Upon being collected, it will play the collect sound at 80% speed, and has a 50% chance to play a very loud sound. Mimic Toppins are entirely black, and retain the shape of whichever Toppin they replaced. Other than that, they function identically to normal Toppins and only serve to scare the player occasionally.</p>
 			<p>*When talking to GPB, he may mention the Mimics, stating that they are only there to harm you. This is misleading, as they do nothing other than jumpscare you. Reading this dialog will raise the chances of a Toppin becoming a Mimic to 50% until the next one spawns.</p>
 			<h2>The Void Room</h2>
-			<audio controls><source src="assets/mu_pizzaboy.ogg" type="audio/ogg"></audio>
+			<audio controls>
+				<source src="assets/mu_pizzaboy.ogg" type="audio/ogg">
+				<source src="assets/mu_pizzaboy.mp3" type="audio/mp3">
+			</audio>
 			<p>This is the music that plays in the Void Room, as well as the Pizzaboy Clone rooms. It contains a speech of unknown origin (possibly religious?). A rough transcript is provided below.</p>
 			<p>0:34 - [Unintelligible]</p>
 			<p>0:39 - Coming on down, coming on down today</p>
