oh bloody hell crustavo moves
im not even british so you know im pissed when i start using their slang

--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -42,7 +42,7 @@
 				document.getElementById("thief").setAttribute("src", "assets/thief.png")
 				document.getElementById("pizzaboy").setAttribute("src", "assets/gpb.png")
 				document.getElementById("crust").setAttribute("src", "assets/crustavo.png")
-				document.getElementById("crust2").setAttribute("src", "assets/crustavo.png")
+				document.getElementById("crust2").setAttribute("src", "assets/crustavo2.png")
 				document.getElementById("pbclone").setAttribute("src", "assets/pbclone2.png")
 				document.getElementById("cbclone").setAttribute("src", "assets/cbclone2.png")
 				document.getElementById("crustcove").setAttribute("src", "assets/fake-keys/crustcovestone.png")
