dont reload when clicking current page

--- a/keyhunt/guide-af23.html
+++ b/keyhunt/guide-af23.html
@@ -16,7 +16,7 @@
 	<body>
 		<ul class="navBar">
 			<li><a href="keyhunt-af23">Landing page</a></li>
-			<li><a href="guide-af23" class="current">Keys</a></li>
+			<li><a href="javascript:void(0)" class="current">Keys</a></li>
 			<li><a href="help-af23">Help</a></li>
 			<li><a href="other-af23">Other Stuff</a></li>
 			<li class="dropdown">
@@ -24,7 +24,7 @@
 				<div class="dropdown-content">
 					<a href="guide">1.2</a>
 					<a href="guide-1.1">1.1</a>
-					<a href="guide-af23" class="current">April Fools</a>
+					<a href="javascript:void(0)" class="current">April Fools</a>
 				</div>
 			</li>
 		</ul>
