--- a/keyhunt/help-af23.html
+++ b/keyhunt/help-af23.html
@@ -17,14 +17,14 @@
 		<ul class="navBar">
 			<li><a href="keyhunt-af23">Landing page</a></li>
 			<li><a href="guide-af23">Keys</a></li>
-			<li><a href="help-af23" class="current">Help</a></li>
+			<li><a href="javascript:void(0)" class="current">Help</a></li>
 			<li><a href="other-af23">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
 					<a href="help">1.2</a>
 					<a href="help-1.1">1.1</a>
-					<a href="help-af23" class="current">April Fools</a>
+					<a href="javascript:void(0)" class="current">April Fools</a>
 				</div>
 			</li>
 		</ul>
