--- a/keyhunt/guide-1.1.html
+++ b/keyhunt/guide-1.1.html
@@ -16,14 +16,14 @@
 	<body>
 		<ul class="navBar">
 			<li><a href="keyhunt-1.1">Landing page</a></li>
-			<li><a href="guide-1.1" class="current">Keys</a></li>
+			<li><a href="javascript:void(0)" class="current">Keys</a></li>
 			<li><a href="help-1.1">Help</a></li>
 			<li><a href="other-1.1">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
 					<a href="guide">1.2</a>
-					<a href="guide-1.1" class="current">1.1</a>
+					<a href="javascript:void(0)" class="current">1.1</a>
 					<a href="guide-af23">April Fools</a>
 				</div>
 			</li>
