--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -26,13 +26,13 @@
 	<body>
 		<ul class="navBar">
 			<li><a href="keyhunt">Landing page</a></li>
-			<li><a href="guide" class="current">Keys</a></li>
+			<li><a href="javascript:void(0)" class="current">Keys</a></li>
 			<li><a href="help">Help</a></li>
 			<li><a href="other">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
-					<a href="guide" class="current">1.2</a>
+					<a href="javascript:void(0)" class="current">1.2</a>
 					<a href="guide-1.1">1.1</a>
 					<a href="guide-af23">April Fools</a>
 				</div>
