--- a/keyhunt/help-1.1.html
+++ b/keyhunt/help-1.1.html
@@ -17,13 +17,13 @@
 		<ul class="navBar">
 			<li><a href="keyhunt-1.1">Landing page</a></li>
 			<li><a href="guide-1.1">Keys</a></li>
-			<li><a href="help-1.1" class="current">Help</a></li>
+			<li><a href="javascript:void(0)" class="current">Help</a></li>
 			<li><a href="other-1.1">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
 					<a href="help">1.2</a>
-					<a href="help-1.1" class="current">1.1</a>
+					<a href="javascript:void(0)" class="current">1.1</a>
 					<a href="help-af23">April Fools</a>
 				</div>
 			</li>
