--- a/keyhunt/help.html
+++ b/keyhunt/help.html
@@ -27,12 +27,12 @@
 		<ul class="navBar">
 			<li><a href="keyhunt">Landing page</a></li>
 			<li><a href="guide">Keys</a></li>
-			<li><a href="help" class="current">Help</a></li>
+			<li><a href="javascript:void(0)" class="current">Help</a></li>
 			<li><a href="other">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
-					<a href="help" class="current">1.2</a>
+					<a href="javascript:void(0)" class="current">1.2</a>
 					<a href="help-1.1">1.1</a>
 					<a href="help-af23">April Fools</a>
 				</div>
