--- a/keyhunt/keyhunt-1.1.html
+++ b/keyhunt/keyhunt-1.1.html
@@ -15,7 +15,7 @@
 
 	<body style="text-align: center;">
 		<ul class="navBar">
-			<li><a href="keyhunt-1.1" class="current">Landing page</a></li>
+			<li><a href="javascript:void(0)" class="current">Landing page</a></li>
 			<li><a href="guide-1.1">Keys</a></li>
 			<li><a href="help-1.1">Help</a></li>
 			<li><a href="other-1.1">Other Stuff</a></li>
@@ -23,7 +23,7 @@
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
 					<a href="keyhunt">1.2</a>
-					<a href="keyhunt-1.1" class="current">1.1</a>
+					<a href="javascript:void(0)" class="current">1.1</a>
 					<a href="keyhunt-af23">April Fools</a>
 				</div>
 			</li>
