--- a/keyhunt/keyhunt-af23.html
+++ b/keyhunt/keyhunt-af23.html
@@ -15,7 +15,7 @@
 
 	<body style="text-align: center;">
 		<ul class="navBar">
-			<li><a href="keyhunt-af23" class="current">Landing page</a></li>
+			<li><a href="javascript:void(0)" class="current">Landing page</a></li>
 			<li><a href="guide-af23">Keys</a></li>
 			<li><a href="help-af23">Help</a></li>
 			<li><a href="other-af23">Other Stuff</a></li>
@@ -24,7 +24,7 @@
 				<div class="dropdown-content">
 					<a href="keyhunt">1.2</a>
 					<a href="keyhunt-1.1">1.1</a>
-					<a href="keyhunt-af23" class="current">April Fools</a>
+					<a href="javascript:void(0)" class="current">April Fools</a>
 				</div>
 			</li>
 		</ul>
