--- a/keyhunt/keyhunt.html
+++ b/keyhunt/keyhunt.html
@@ -25,14 +25,14 @@
 
 	<body style="text-align: center;">
 		<ul class="navBar">
-			<li><a href="keyhunt" class="current">Landing page</a></li>
+			<li><a href="javascript:void(0)" class="current">Landing page</a></li>
 			<li><a href="guide">Keys</a></li>
 			<li><a href="help">Help</a></li>
 			<li><a href="other">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
-					<a href="keyhunt" class="current">1.2</a>
+					<a href="javascript:void(0)" class="current">1.2</a>
 					<a href="keyhunt-1.1">1.1</a>
 					<a href="keyhunt-af23">April Fools</a>
 				</div>
