--- a/keyhunt/other-1.1.html
+++ b/keyhunt/other-1.1.html
@@ -18,12 +18,12 @@
 			<li><a href="keyhunt-1.1">Landing page</a></li>
 			<li><a href="guide-1.1">Keys</a></li>
 			<li><a href="help-1.1">Help</a></li>
-			<li><a href="other-1.1" class="current">Other Stuff</a></li>
+			<li><a href="javascript:void(0)" class="current">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
 					<a href="other">1.2</a>
-					<a href="other-1.1" class="current">1.1</a>
+					<a href="javascript:void(0)" class="current">1.1</a>
 					<a href="other-af23">April Fools</a>
 				</div>
 			</li>
