--- a/keyhunt/other-af23.html
+++ b/keyhunt/other-af23.html
@@ -18,13 +18,13 @@
 			<li><a href="keyhunt-af23">Landing page</a></li>
 			<li><a href="guide-af23">Keys</a></li>
 			<li><a href="help-af23">Help</a></li>
-			<li><a href="other-af23" class="current">Other Stuff</a></li>
+			<li><a href="javascript:void(0)" class="current">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
 					<a href="other">1.2</a>
 					<a href="other-1.1">1.1</a>
-					<a href="other-af23" class="current">April Fools</a>
+					<a href="javascript:void(0)" class="current">April Fools</a>
 				</div>
 			</li>
 		</ul>
