--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -62,11 +62,11 @@
 			<li><a href="keyhunt">Landing page</a></li>
 			<li><a href="guide">Keys</a></li>
 			<li><a href="help">Help</a></li>
-			<li><a href="other" class="current">Other Stuff</a></li>
+			<li><a href="javascript:void(0)" class="current">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content" id="dropdown">
-					<a href="other" class="current">1.2</a>
+					<a href="javascript:void(0)" class="current">1.2</a>
 					<a href="other-1.1">1.1</a>
 					<a href="other-af23">April Fools</a>
 				</div>
