added 2.0 key hunt
stop asking

--- a/keyhunt/keyhunt.html
+++ b/keyhunt/keyhunt.html
@@ -35,6 +35,7 @@
 					<a href="javascript:void(0)" class="current">1.2</a>
 					<a href="keyhunt-1.1">1.1</a>
 					<a href="keyhunt-af23">April Fools</a>
+					<a href="guide-2.0">2.0</a>
 				</div>
 			</li>
 		</ul>
