--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -69,6 +69,7 @@
 					<a href="javascript:void(0)" class="current">1.2</a>
 					<a href="other-1.1">1.1</a>
 					<a href="other-af23">April Fools</a>
+					<a href="guide-2.0">2.0</a>
 				</div>
 			</li>
 		</ul>
