--- a/keyhunt/guide-1.1.html
+++ b/keyhunt/guide-1.1.html
@@ -25,6 +25,7 @@
 					<a href="guide">1.2</a>
 					<a href="javascript:void(0)" class="current">1.1</a>
 					<a href="guide-af23">April Fools</a>
+					<a href="guide-2.0">2.0</a>
 				</div>
 			</li>
 		</ul>
