--- a/keyhunt/help-af23.html
+++ b/keyhunt/help-af23.html
@@ -25,6 +25,7 @@
 					<a href="help">1.2</a>
 					<a href="help-1.1">1.1</a>
 					<a href="javascript:void(0)" class="current">April Fools</a>
+					<a href="guide-2.0">2.0</a>
 				</div>
 			</li>
 		</ul>
