added runs and fixed stuff

--- a/speedruns/njamod_il/runs/2/index.html
+++ b/speedruns/njamod_il/runs/2/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Tower: Scoutdigo - NJAmod (IL) - NJAmod + Infinite Speed - John Gutter Any% - Pashamacho2010</title>
+    <title>Pizza Tower: Scoutdigo - NJAmod (IL) - NJAmod + Infinite Speed - John Gutter Any% - Ryanator Gaming</title>
 
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="icon" href="../../assets/img/logo.png">
 
-    <meta property="og:title" content="Pizza Tower: Scoutdigo - NJAmod (IL) - NJAmod + Infinite Speed - John Gutter Any% - Pashamacho2010" />
+    <meta property="og:title" content="Pizza Tower: Scoutdigo - NJAmod (IL) - NJAmod + Infinite Speed - John Gutter Any% - Ryanator Gaming" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="speedrunnin with thenja09 mode + infinite speed" />
-    <meta property="og:url" content="westcraft15.github.io/speedruns/njamod_il/1/index.html" />
+    <meta property="og:description" content="here's my John Gutter run" />
+    <meta property="og:url" content="westcraft15.github.io/speedruns/njamod_il/2/index.html" />
     <meta property="og:image" content="https://westcraft15.github.io/speedruns/njamod_il/assets/img/logo.png" />
     <meta property="og:image:secure_url" content="https://westcraft15.github.io/speedruns/njamod_il/assets/img/logo.png" />
     <meta property="og:image:alt" content="NJAmod logo" />
@@ -24,13 +24,13 @@
 
 <body>
     <h1><a href="../../">Pizza Tower: Scoutdigo - NJAmod (IL)</a> - <a href="../../categories/NJA+IS-John_Gutter_Any">NJAmod + Infinite Speed - John Gutter Any%</a></h1>
-    <h2 class="reduceTopMargin">Pashamacho2010's run</h2>
+    <h2 class="reduceTopMargin">Ryanator Gaming's run</h2>
     <div class="runContainer">
-        <p>0:01:31 (rank #2)</p>
-        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/UioHmki5U2I">Run recording</a></p>
+        <p>0:01:07 (rank #1)</p>
+        <p class="reduceTopMargin"><a class="runLink" href="https://media-1.discordapp.net/attachments/982908616329793546/1155232824387977328/johngutterspeedrun.mp4">Run recording</a></p>
     </div>
-    <p class="runDescription"><em>speedrunnin with thenja09 mode + infinite speed</em></p>
-    <p>Verified by <strong>WestCraft15</strong> - Took place on <strong>09/19/2023</strong></p>
+    <p class="runDescription"><em>here's my John Gutter run</em></p>
+    <p>Verified by <strong>WestCraft15</strong> - Took place on <strong>09/23/2023</strong></p>
 </body>
 
 </html>
