--- a/speedruns/scoutdigo_il/index.html
+++ b/speedruns/scoutdigo_il/index.html
@@ -28,7 +28,7 @@
     <p>A mod for Pizza Tower</p>
 
     <h2>Categories</h2>
-    <div class="reduceTopMargin" style="text-align: center;"><a class="categoryLink" href="categories/1.2-Refrigerator-Refrigerador-Freezerator_Any">1.2 - Refrigerator-Refrigerador-Freezerator Any%</a></div>
+    <div class="reduceTopMargin" style="text-align: center;"><a class="categoryLink" href="categories/1.2-Refrigerator-Refrigerador-Freezerator_Any">1.2 - Refrigerator-Refrigerador-Freezerator Any%</a><a class="categoryLink" href="categories/1.2-Pig_City_Any">1.2 - Pig City Any%</a></div>
 </body>
 
 </html>
