--- a/speedruns/scoutdigo_il/runs/2/index.html
+++ b/speedruns/scoutdigo_il/runs/2/index.html
@@ -12,8 +12,8 @@
 
     <meta property="og:title" content="Pizza Tower: Scoutdigo (IL) - 1.2 - Refrigerator-Refrigerador-Freezerator Any% - GalRosalina" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Pizzelle's Icing-Sugar Peaks" />
-    <meta property="og:url" content="westcraft15.github.io/speedruns/scoutdigo_il/1/index.html" />
+    <meta property="og:description" content="Hi Nja waves" />
+    <meta property="og:url" content="westcraft15.github.io/speedruns/scoutdigo_il/2/index.html" />
     <meta property="og:image" content="https://westcraft15.github.io/speedruns/scoutdigo_il/assets/img/logo.png" />
     <meta property="og:image:secure_url" content="https://westcraft15.github.io/speedruns/scoutdigo_il/assets/img/logo.png" />
     <meta property="og:image:alt" content="Scoutdigo logo" />
@@ -26,10 +26,10 @@
     <h1><a href="../../">Pizza Tower: Scoutdigo (IL)</a> - <a href="../../categories/1.2-Refrigerator-Refrigerador-Freezerator_Any">1.2 - Refrigerator-Refrigerador-Freezerator Any%</a></h1>
     <h2 class="reduceTopMargin">GalRosalina's run</h2>
     <div class="runContainer">
-        <p>0:03:43 (rank #lk_run_place)</p>
-        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/aEfvzYhS3NE">Run recording</a></p>
+        <p>0:03:26 (rank #2)</p>
+        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/-wDJgEoJvv8">Run recording</a></p>
     </div>
-    <p class="runDescription"><em>Pizzelle's Icing-Sugar Peaks</em></p>
+    <p class="runDescription"><em>Hi Nja waves</em></p>
     <p>Verified by <strong>WestCraft15</strong> - Took place on <strong>08/24/2023</strong></p>
 </body>
 
