--- a/speedruns/scoutdigo_il/runs/3/index.html
+++ b/speedruns/scoutdigo_il/runs/3/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Tower: Scoutdigo (IL) - 1.2 - Refrigerator-Refrigerador-Freezerator Any% - GalRosalina</title>
+    <title>Pizza Tower: Scoutdigo (IL) - 1.2 - Refrigerator-Refrigerador-Freezerator Any% - TheNja09</title>
 
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="icon" href="../../assets/img/logo.png">
 
-    <meta property="og:title" content="Pizza Tower: Scoutdigo (IL) - 1.2 - Refrigerator-Refrigerador-Freezerator Any% - GalRosalina" />
+    <meta property="og:title" content="Pizza Tower: Scoutdigo (IL) - 1.2 - Refrigerator-Refrigerador-Freezerator Any% - TheNja09" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Pizzelle's Icing-Sugar Peaks" />
-    <meta property="og:url" content="westcraft15.github.io/speedruns/scoutdigo_il/1/index.html" />
+    <meta property="og:description" content="" />
+    <meta property="og:url" content="westcraft15.github.io/speedruns/scoutdigo_il/3/index.html" />
     <meta property="og:image" content="https://westcraft15.github.io/speedruns/scoutdigo_il/assets/img/logo.png" />
     <meta property="og:image:secure_url" content="https://westcraft15.github.io/speedruns/scoutdigo_il/assets/img/logo.png" />
     <meta property="og:image:alt" content="Scoutdigo logo" />
@@ -24,12 +24,12 @@
 
 <body>
     <h1><a href="../../">Pizza Tower: Scoutdigo (IL)</a> - <a href="../../categories/1.2-Refrigerator-Refrigerador-Freezerator_Any">1.2 - Refrigerator-Refrigerador-Freezerator Any%</a></h1>
-    <h2 class="reduceTopMargin">GalRosalina's run</h2>
+    <h2 class="reduceTopMargin">TheNja09's run</h2>
     <div class="runContainer">
-        <p>0:03:43 (rank #lk_run_place)</p>
-        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/aEfvzYhS3NE">Run recording</a></p>
+        <p>0:02:39 (rank #1)</p>
+        <p class="reduceTopMargin"><a class="runLink" href="https://media-1.discordapp.net/attachments/982908616329793546/1144398357343772682/2023-08-24_17-27-05.mp4">Run recording</a></p>
     </div>
-    <p class="runDescription"><em>Pizzelle's Icing-Sugar Peaks</em></p>
+    <p class="runDescription"><em></em></p>
     <p>Verified by <strong>WestCraft15</strong> - Took place on <strong>08/24/2023</strong></p>
 </body>
 
