I FORGOT TO ADD THE VIDEO AIUSGBFDIUYAGFYU

--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -42,9 +42,9 @@
 		
 
 		<div style="padding:20px; margin-top:20px;">
-			<h1>All Keys Video Guide (Coming Soon!)</h1>
+			<h1>All Keys Video Guide</h1>
 			<p>This video will show the location of every Key in order. If you want to use the original guide, or if you need help on a specific Key, it can be found below.</p>
-			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ImDuLN3pQFo" title="All Keys" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
+			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YFTX2mmBokk" title="All Keys" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="1">Key 1</h2>
 			<p>Talk to GPB in the <a href="help#void">Void Room</a> to start the Key Hunt. The Void Room can be unlocked by beating the Crumbling Tower of Pizza. Then Mach Dash into the bottom of the wall to the right of Gerome on Floor 1.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/vGQSddUHiZs" title="Key 1" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
@@ -191,7 +191,7 @@
 			<ol>
 				<li>Ground Pound a platform in the 7th room of Refrigerator-Refrigerador-Freezerator (“Icicle Pillars”). It’s the overhang immediately after you get up from the Pizza Box area.<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3aYSetw6sBU" title="Key 36a" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
-				<li>Slam into the ceiling in front of the first timed gate in the 6th room of Fast Food Saloon (“Big Long Weenie”).<br>
+				<li>Slam into the ceiling to the left of the first timed gate in the 6th room of Fast Food Saloon (“Big Long Weenie”).<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wmCy0LiA9f0" title="Key 36b" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
 				<li>In the Key room in The Ancient Cheese (“Explosive Personality”), slam into the ceiling of the pocket with the 4 Small Toppings.<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JGbTO-dex6w" title="Key 36c" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
